# BitERC-old

./: .gitignore  Cargo.toml  README.md  config.toml  indexer_gen_cfg.sh  indexer_start_node.sh  send_tx.sh  start_node.sh
bins/build_tx/: Cargo.toml
bins/build_tx/src/: command_line.rs  config_transaction.rs  eth_transaction.rs  main.rs
bins/gen_tx/: Cargo.toml
bins/gen_tx/src/: main.rs
bins/indexer/: Cargo.toml
bins/indexer/src/: command_line.rs  generate_config.rs  main.rs  node.rs
bins/tx/: Cargo.toml
bins/tx/src/: chain_config_transaction.rs  command_line.rs  config_transaction.rs  eth_transaction.rs  gen_chain_config.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: chain_config.rs  config.rs  lib.rs
crates/da/: Cargo.toml
crates/da/src/: da_type.rs  lib.rs  service.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: fetcher.rs  lib.rs
crates/rpc_server/: Cargo.toml
crates/rpc_server/src/: handle.rs  lib.rs
crates/tx_builder/: Cargo.toml
crates/tx_builder/src/: btc.rs  eth.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  script_code.rs  utils.rs
da/: Cargo.toml
da/src/: celestia_service.rs  file_service.rs  greenfield_servic.rs  handle.rs  ipfs_service.rs  lib.rs  service.rs
rt-evm/api/src/jsonrpc/impls/: web3.rs
rt-evm/blockmgmt/src/: lib.rs
rt-evm/mempool/src/: lib.rs
rt-evm/model/: Cargo.toml
rt-evm/model/src/traits/: storage.rs
rt-evm/storage/: Cargo.toml
rt-evm/storage/src/: lib.rs
services/: Cargo.toml
services/src/jsonrpc/: client.rs  server.rs
src/: command_line.rs  config.rs  evm_runtime.rs  fetcher_service.rs  generate_config.rs  generate_transaction.rs  handle.rs  main.rs  node.rs  novolite.rs  vout_code.rs
src/tx/: btc.rs  eth.rs
