[workspace]
members = [
    "crates/utils",
    "crates/da", 
    "crates/rpc_server",
    "crates/tx_builder",
    "crates/fetcher",
    "crates/config",
    "bins/indexer",
]
resolver = "2"

[workspace.dependencies]
utils = { path = "crates/utils" }
da = { path = "crates/da" }
rpc_server = { path = "crates/rpc_server" }
tx_builder = { path = "crates/tx_builder" }
fetcher = { path = "crates/fetcher" }
config = { path = "crates/config" }

anyhow = "1.0.72"
env_logger = "0.10.0"
log = "0.4.19"

async-trait = "0.1.72"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
sha3 = "0.10"
hex = "0.4.3"
futures = "0.3"
base58 = "0.2.0"

json-rpc-server = "0.1.0"

bitcoin = "0.31.1"
bitcoincore-rpc = "0.18.0"
ethers = { version = "2.0.13", features = ["optimism"] }

rt-evm = { git = "https://github.com/Novo-Network/rt-evm.git"}
