[workspace]
members = [
    "crates/utils",
    "crates/rpc_server",
    "crates/tx_builder",
    "crates/fetcher",
    "crates/config",
]
resolver = "2"

[workspace.dependencies]
utils = { path = "crates/utils" }
da = { git = "https://github.com/Novo-Network/da.git",default-features = false }
rpc_server = { path = "crates/rpc_server" }
tx_builder = { path = "crates/tx_builder" }
fetcher = { path = "crates/fetcher" }
config = { path = "crates/config" }

anyhow = "1.0.72"
env_logger = "0.10.0"
log = "0.4.19"

async-trait = "0.1.72"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
sha3 = "0.10"
hex = "0.4.3"
futures = "0.3"
base58 = "0.2.0"
toml = "0.7.6"

json-rpc-server = "0.1.0"

bitcoin = "0.31.1"
bitcoincore-rpc = "0.18.0"
ethers = { version = "2.0.13", features = ["optimism"] }

rt-evm = { git = "https://github.com/Novo-Network/rt-evm.git" }

[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow =  { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

da = { workspace = true }
rpc_server = { workspace = true }
fetcher = { workspace = true }
config = { workspace = true }

serde_json = { workspace = true }
rt-evm =  { workspace = true }

clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.26", features = ["full"] }
json-rpc-server = { workspace = true }
toml = { workspace = true }

vsdb = { version = "0.62.0", default-features = false, features = ["rocks_backend","extra_types"] }

bitcoincore-rpc = { workspace = true }
 
[features]
default = ["file","greenfield"]

file = ["config/file"]
ipfs = ["config/ipfs"]
celestia = ["config/celestia"]
greenfield = ["config/greenfield"]
ethereum = ["config/ethereum"]