[package]
name = "da"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
sha3="0.10"
hex = "0.4.3"
futures = "0.3"
base58 = "0.2.0"

async-trait = "0.1.72"

ipfs-api-backend-hyper = { workspace = true }
ipfs-api = { workspace = true }

celestia-rpc = { git = "https://github.com/eigerco/celestia-node-rs.git" }
celestia-types = { git = "https://github.com/eigerco/celestia-node-rs.git" }
