[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
hyper = { version = "0.14.27", features = [
  "client",
  "http1",
  "http2",
  "tcp",
  "server",
] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
async-trait = "0.1.72"
log = "0.4.19"
