[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow =  { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

da = { workspace = true }
rpc_server = { workspace = true }
fetcher = { workspace = true }
config = { workspace = true }

serde_json = { workspace = true }
rt-evm =  { workspace = true }

clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.26", features = ["full"] }
json-rpc-server = { workspace = true }

vsdb = { version = "0.62.0", default-features = false, features = ["rocks_backend","extra_types"] }

bitcoincore-rpc = { workspace = true }
 
[features]
default = ["ethereum"]

file = ["da/file", "config/file"]
ipfs = ["da/ipfs", "config/ipfs"]
celestia = ["da/celestia", "config/celestia"]
greenfield = ["da/greenfield", "config/greenfield"]
ethereum = ["da/ethereum", "config/ethereum"]