[package]
name = "tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow =  { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

utils = { workspace = true }
da = { workspace = true }
tx_builder = { workspace = true }
config = { workspace = true }

hex =  { workspace = true }
serde_json = { workspace = true }

clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.26", features = ["full"] }
json-rpc-server = { workspace = true }

bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
ethers = { workspace = true }

[features]
default = ["ethereum"]

file = ["config/file"]
ipfs = ["config/ipfs"]
celestia = ["config/celestia"]
greenfield = ["config/greenfield"]
ethereum = ["config/ethereum"]