[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = "0.7.6"

da = { workspace = true }
ethers = { workspace = true }

[features]
file = ["da/file"]
ipfs = ["da/ipfs"]
celestia = ["da/celestia"]
greenfield = ["da/greenfield"]
ethereum = ["da/ethereum"]