[package]
name = "rpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
da = { workspace = true }

json-rpc-server = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
ethers = { workspace = true }